diagweave/tests/ui/union/constructor_collision.stderr
error: constructor name collision `url` in `CollisionError`
 --> tests/ui/union/constructor_collision.rs:6:9
  |
6 |         Url,
  |         ^^^
