diagweave/tests/ui/union/constructor_collision.rs
use diagweave::union;

union! {
    enum CollisionError = {
        URL,
        Url,
    }
}

fn main() {}
